--- a/FloES/FloES.csproj
+++ b/FloES/FloES.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.3.1</Version>
+    <Version>1.3.2</Version>
     <PackOnBuild>true</PackOnBuild>
     <Authors>Omar Himada</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -19,9 +19,10 @@
 
   <PropertyGroup>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
-		<AssemblyVersion>1.3.1.0</AssemblyVersion>
+		<AssemblyVersion>1.3.2.0</AssemblyVersion>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<FileVersion>1.3.1.0</FileVersion>
+		<FileVersion>1.3.2.0</FileVersion>
+		<PackageReleaseNotes>"SearchPaged" ability added for implementing server-side paging with DataGrids - this is an expensive operation and shouldn't be used with very large sets (e.g.: &gt;1 million documents and thousands of pages)</PackageReleaseNotes>
 	</PropertyGroup>
 
   <ItemGroup>
