--- a/FloES/FloES.csproj
+++ b/FloES/FloES.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.4.3</Version>
+    <Version>1.4.5</Version>
     <PackOnBuild>true</PackOnBuild>
     <Authors>Omar Himada</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -19,10 +19,11 @@
 
   <PropertyGroup>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
-		<AssemblyVersion>1.4.3.0</AssemblyVersion>
+		<AssemblyVersion>1.4.5.0</AssemblyVersion>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<FileVersion>1.4.3.0</FileVersion>
-		<PackageReleaseNotes>1.4.3: Better error logging
+		<FileVersion>1.4.5.0</FileVersion>
+		<PackageReleaseNotes>1.4.5: Newer C# 7.0 tuples
+1.4.3: Better error logging
 1.4.2: Pagination bugs fixed
 1.4.0: Sorting &amp; filtering introduced + large refactoring/simplification</PackageReleaseNotes>
 	</PropertyGroup>
