--- a/FloES/FloES.csproj
+++ b/FloES/FloES.csproj
@@ -44,5 +44,6 @@
     <PackageReference Include="NEST.JsonNetSerializer" Version="7.6.0" />
     <PackageReference Include="NEST" Version="7.6.0" />
     <PackageReference Include="Elasticsearch.Net.Aws" Version="7.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.3" />
   </ItemGroup>
 </Project>
