--- a/FloES/FloES.csproj
+++ b/FloES/FloES.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.4.7</Version>
+    <Version>1.4.8</Version>
     <PackOnBuild>true</PackOnBuild>
     <Authors>Omar Himada</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -14,22 +14,23 @@
     <Title>FloES</Title>
     <RepositoryUrl>https://github.com/omarhimada/floes</RepositoryUrl>
     <PackageId>FloES</PackageId>
+    <LangVersion>8</LangVersion>
     <Description>FloES is a generic wrapper for common Elasticsearch operations, such as writing, finding, searching, listing and paginating documents. Uses Nest &amp; Elasticsearch.Net.AWS, and includes ILogger support</Description>
   </PropertyGroup>
 
   <PropertyGroup>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
-		<AssemblyVersion>1.4.7.0</AssemblyVersion>
+		<AssemblyVersion>1.4.8.0</AssemblyVersion>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<FileVersion>1.4.7.0</FileVersion>
-		<PackageReleaseNotes>
-            1.4.7: Fixed generics implementation and introduced IMemoryCache integration
-            1.4.6: Fixed a bug with sorting strings (will use .keyword suffix now)
-            1.4.5: Newer C# 7.0 tuples
-            1.4.3: Better error logging
-            1.4.2: Pagination bugs fixed
-            1.4.0: Sorting &amp; filtering introduced + large refactoring/simplification
-        </PackageReleaseNotes>
+		<FileVersion>1.4.8.0</FileVersion>
+		<PackageReleaseNotes>1.4.8: Dependencies updated (Nest, Elasticsearch.Net, etc.)
+1.4.7: Fixed generics implementation and introduced IMemoryCache integration
+1.4.6: Fixed a bug with sorting strings (will use .keyword suffix now)
+1.4.5: Newer C# 7.0 tuples
+1.4.3: Better error logging
+1.4.2: Pagination bugs fixed
+1.4.0: Sorting &amp; filtering introduced + large refactoring/simplification
+</PackageReleaseNotes>
 	</PropertyGroup>
 
   <ItemGroup>
@@ -43,10 +44,10 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Elasticsearch.Net" Version="7.6.0" />
-    <PackageReference Include="NEST.JsonNetSerializer" Version="7.6.0" />
-    <PackageReference Include="NEST" Version="7.6.0" />
-    <PackageReference Include="Elasticsearch.Net.Aws" Version="7.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.3" />
+    <PackageReference Include="Elasticsearch.Net" Version="7.9.0" />
+    <PackageReference Include="NEST.JsonNetSerializer" Version="7.9.0" />
+    <PackageReference Include="NEST" Version="7.9.0" />
+    <PackageReference Include="Elasticsearch.Net.Aws" Version="7.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.8" />
   </ItemGroup>
 </Project>
